--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -65,7 +65,7 @@ div.about-me{
 	color: black;
 	font-size: 3em;
 	/* font-weight: 900; */
-	background-color: blue;
+	background-color: cornflowerblue;
 	padding: 0 20px;
 	border-radius: 50%;
 	height: 60px;
