--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -130,10 +130,15 @@ div.about-me{
 		
 	}
 
+	header, main, footer {
+		width: calc(100vw - 20px);
+	}
+
 	section.my-img{
 		margin: 0 auto;
-		border-color: purple;
+		border: 2px dashed purple;
 		height: 200px;
+		display: block;
 	}
 
 	section.my-img img{
@@ -154,7 +159,7 @@ div.about-me{
 		height: 100vh;
 		font-size: 1em;
 		padding: 0;
-		line-height: 50vh;
+		line-height: 100vh;
 
 	}
 }
